Fix horizontal scroll issue

--- a/styles.css
+++ b/styles.css
@@ -447,7 +447,7 @@ video {
 
 .home-header {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
